testProject/force-app/main/default/objects/Property__c/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bathrooms</label>
    <length>3</length>
    <type>Text</type>
</CustomField>