testProject/force-app/main/default/objects/Property__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bedrooms</label>
    <length>5</length>
    <type>Text</type>
</CustomField>