testProject/force-app/main/default/objects/Property__c/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>