testProject/force-app/main/default/objects/Property__c/fields/Latest_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Latest_Mortgage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Mortgage</label>
    <length>120</length>
    <type>Text</type>
</CustomField>