testProject/force-app/main/default/objects/Property__c/fields/Mortgage_Lender__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Lender__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mortgage Lender</label>
    <length>75</length>
    <type>Text</type>
</CustomField>