testProject/force-app/main/default/objects/Property__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Year Built</label>
    <length>12</length>
    <type>Text</type>
</CustomField>